# skills_example

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  run.py  setup.py
core/: __init__.py  base.py  orchestrator.py
examples/: gemini_example.py  openai_example.py
skills/: builtin.py
skills/sample/: SKILLS.md
src/langgraph_skills/: __init__.py
src/langgraph_skills/core/: base.py  loader.py  orchestrator.py  registry.py
src/langgraph_skills/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
src/langgraph_skills/skills/: __init__.py  builtin.py
src/langgraph_skills/utils/: logger.py
tests/: test_orchestrator.py  test_providers.py  test_registry.py
