[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-skills"
version = "0.1.0"
description = "LangGraph-based skill orchestration system with multi-LLM support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "build",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
